updated some values

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Johnson - Portfolio</title>
+    <title>Viraj Patel - Portfolio</title>
     <meta name="description" content="Creative Developer Portfolio">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -530,9 +530,9 @@
                 <div class="profile-image">
                     <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=200&h=200&fit=crop&crop=face" alt="Profile" />
                 </div>
-                <h1>Alex Johnson</h1>
+                <h1>Viraj Patel</h1>
                 <p class="subtitle">
-                    <span class="accent">Creative</span> Developer
+                    <span class="accent">Software</span> Engineer
                 </p>
                 <p class="description">
                     Crafting digital experiences with passion and precision
@@ -603,56 +603,6 @@
                                 </div>
                                 <div class="achievement">
                                     <span>Integrated payment systems</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <div class="timeline-header">
-                                <h3 class="timeline-title">Frontend Developer</h3>
-                                <span class="timeline-period">2019 - 2020</span>
-                            </div>
-                            <h4 class="timeline-company">StartupXYZ</h4>
-                            <p class="timeline-description">
-                                Developed responsive web interfaces and mobile applications. Worked in an agile environment with rapid iteration cycles.
-                            </p>
-                            <div class="achievements">
-                                <div class="achievement">
-                                    <span>Built MVP in 3 months</span>
-                                </div>
-                                <div class="achievement">
-                                    <span>Implemented responsive design</span>
-                                </div>
-                                <div class="achievement">
-                                    <span>Optimized for mobile</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <div class="timeline-header">
-                                <h3 class="timeline-title">Junior Developer</h3>
-                                <span class="timeline-period">2018 - 2019</span>
-                            </div>
-                            <h4 class="timeline-company">WebCraft Agency</h4>
-                            <p class="timeline-description">
-                                Started my professional journey building websites and learning modern development practices. Gained experience in various technologies and frameworks.
-                            </p>
-                            <div class="achievements">
-                                <div class="achievement">
-                                    <span>Completed 20+ projects</span>
-                                </div>
-                                <div class="achievement">
-                                    <span>Learned React & Node.js</span>
-                                </div>
-                                <div class="achievement">
-                                    <span>Client satisfaction 95%</span>
                                 </div>
                             </div>
                         </div>
