new portfolio design

--- a/static-portfolio/index.html
+++ b/static-portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viraj Patel - Portfolio</title>
-    <meta name="description" content="Creative Developer Portfolio">
+    <meta name="description" content="Software Engineer Portfolio">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600&display=swap" rel="stylesheet">
@@ -149,6 +149,42 @@
 
         [data-theme="dark"] .moon-icon {
             transform: rotate(0deg) scale(1);
+        }
+
+        .nav-button {
+            position: fixed;
+            top: 24px;
+            left: 24px;
+            z-index: 20;
+            padding: 8px 16px;
+            border-radius: 20px;
+            background: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(8px);
+            border: 1px solid var(--border-primary);
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            text-decoration: none;
+            color: var(--text-primary);
+            font-size: 0.875rem;
+            font-weight: 300;
+            transition: all 0.2s ease;
+        }
+
+        [data-theme="dark"] .nav-button {
+            background: rgba(17, 24, 39, 0.8);
+        }
+
+        .nav-button:hover {
+            background: var(--bg-primary);
+            color: var(--accent-primary);
+        }
+
+        .nav-button svg {
+            width: 14px;
+            height: 14px;
+            color: var(--accent-primary);
         }
 
         .content {
@@ -507,6 +543,13 @@
     <div class="container">
         <div class="gradient-bg"></div>
         
+        <!-- <a href="blog.html" class="nav-button">
+            <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
+            </svg>
+            Blog
+        </a> -->
+        
         <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
             <svg class="sun-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <circle cx="12" cy="12" r="5"></circle>
@@ -527,9 +570,6 @@
         <div class="content">
             <!-- Hero Section -->
             <div class="hero">
-                <div class="profile-image">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=200&h=200&fit=crop&crop=face" alt="Profile" />
-                </div>
                 <h1>Viraj Patel</h1>
                 <p class="subtitle">
                     <span class="accent">Software</span> Engineer
@@ -543,7 +583,7 @@
             <section class="section">
                 <h2><span class="accent">About</span></h2>
                 <p>
-                    I'm a passionate developer with over 5 years of experience creating
+                    I'm a passionate developer with over 3 years of experience creating
                     <span class="accent">beautiful</span> and
                     <span class="accent">functional</span> digital solutions. I specialize in
                     modern web technologies and user-centered design.
@@ -556,109 +596,29 @@
 
             <!-- Work Experience Section -->
             <section class="section">
-                <h2><span class="accent">Work</span> Experience</h2>
+                <h2><span class="accent">Application</span> Products</h2>
                 <div class="timeline">
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
                         <div class="timeline-content">
                             <div class="timeline-header">
-                                <h3 class="timeline-title">Senior Frontend Developer</h3>
-                                <span class="timeline-period">2022 - Present</span>
+                                <h3 class="timeline-title">Loop</h3>
+                                <span class="timeline-period">2024 - Present</span>
                             </div>
-                            <h4 class="timeline-company">TechFlow Inc.</h4>
+                            <h4 class="timeline-company">Active</h4>
                             <p class="timeline-description">
-                                Leading the development of next-generation web applications using React and TypeScript. Mentoring junior developers and establishing best practices for the frontend team.
+                                Loop is a location based safety application that helps users stay safe by providing real-time alerts and safety tips based on their location.
+                                With a community driven approach, Loop empowers users to share safety information and stay informed about potential risks in their area.
                             </p>
                             <div class="achievements">
                                 <div class="achievement">
-                                    <span>Improved app performance by 40%</span>
+                                    <span>Currently in development</span>
                                 </div>
                                 <div class="achievement">
-                                    <span>Led team of 5 developers</span>
-                                </div>
-                                <div class="achievement">
-                                    <span>Implemented design system</span>
+                                    <span>Will be available in App Store and Google Play</span>
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <div class="timeline-header">
-                                <h3 class="timeline-title">Full Stack Developer</h3>
-                                <span class="timeline-period">2020 - 2022</span>
-                            </div>
-                            <h4 class="timeline-company">Digital Solutions Co.</h4>
-                            <p class="timeline-description">
-                                Built scalable web applications from concept to deployment. Collaborated with designers and product managers to deliver user-centered solutions.
-                            </p>
-                            <div class="achievements">
-                                <div class="achievement">
-                                    <span>Launched 3 major products</span>
-                                </div>
-                                <div class="achievement">
-                                    <span>Reduced load times by 60%</span>
-                                </div>
-                                <div class="achievement">
-                                    <span>Integrated payment systems</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Skills Section -->
-            <section class="section">
-                <h2><span class="accent">Skills</span></h2>
-                <div class="skills-list">
-                    <div class="skill-item">
-                        <span>React & Next.js</span>
-                    </div>
-                    <div class="skill-item">
-                        <span>TypeScript & JavaScript</span>
-                    </div>
-                    <div class="skill-item">
-                        <span>Node.js & Express</span>
-                    </div>
-                    <div class="skill-item">
-                        <span>Python & Django</span>
-                    </div>
-                    <div class="skill-item">
-                        <span>Design Systems & UI/UX</span>
-                    </div>
-                    <div class="skill-item">
-                        <span>Database Design & Management</span>
-                    </div>
-                    <div class="skill-item">
-                        <span>Cloud Architecture & DevOps</span>
-                    </div>
-                    <div class="skill-item">
-                        <span>Mobile Development</span>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Projects Section -->
-            <section class="section">
-                <h2><span class="accent">Selected</span> Work</h2>
-                <div class="projects-list">
-                    <div class="project-item">
-                        <h3 class="project-title">E-commerce Platform</h3>
-                        <p class="project-description">A modern e-commerce solution built with Next.js and Stripe integration.</p>
-                        <p class="project-tech">Next.js, TypeScript, Stripe</p>
-                    </div>
-                    <div class="project-item">
-                        <h3 class="project-title">Design System</h3>
-                        <p class="project-description">Comprehensive design system for a fintech startup with 50+ components.</p>
-                        <p class="project-tech">React, Storybook, Figma</p>
-                    </div>
-                    <div class="project-item">
-                        <h3 class="project-title">Mobile App</h3>
-                        <p class="project-description">Cross-platform mobile application for task management and productivity.</p>
-                        <p class="project-tech">React Native, Firebase</p>
                     </div>
                 </div>
             </section>
@@ -667,19 +627,19 @@
             <section class="section">
                 <h2><span class="accent">Get</span> in Touch</h2>
                 <div class="contact-list">
-                    <a href="mailto:alex@example.com" class="contact-item">
+                    <a href="mailto:virajpatel325@gmail.com" class="contact-item">
                         <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
                             <polyline points="22,6 12,13 2,6"></polyline>
                         </svg>
-                        <span>alex@example.com</span>
+                        <span>virajpatel325@gmail.com</span>
                     </a>
 
-                    <a href="tel:+1234567890" class="contact-item">
+                    <a href="tel:+6146578396" class="contact-item">
                         <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
                         </svg>
-                        <span>+1 (234) 567-8900</span>
+                        <span>+1 (614) 657-8396</span>
                     </a>
 
                     <a href="https://linkedin.com/in/alexjohnson" class="contact-item">
@@ -696,11 +656,18 @@
                         <span>github.com/alexjohnson</span>
                     </a>
 
-                    <a href="https://twitter.com/alexjohnson" class="contact-item">
+                    <a href="https://play.google.com/store/apps/details?id=com.taskmaster.pro" class="contact-item">
                         <svg fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/>
+                            <path d="M3,20.5V3.5C3,2.91 3.34,2.39 3.84,2.15L13.69,12L3.84,21.85C3.34,21.61 3,21.09 3,20.5M16.81,15.12L6.05,21.34L14.54,12.85L16.81,15.12M20.16,10.81C20.5,11.08 20.75,11.5 20.75,12C20.75,12.5 20.53,12.9 20.18,13.18L17.89,14.5L15.39,12L17.89,9.5L20.16,10.81M6.05,2.66L16.81,8.88L14.54,11.15L6.05,2.66Z"/>
                         </svg>
-                        <span>@alexjohnson</span>
+                        <span>Google Play</span>
+                    </a>
+
+                    <a href="https://apps.apple.com/app/taskmaster-pro/id123456789" class="contact-item">
+                        <svg fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M18.71,19.5C17.88,20.74 17,21.95 15.66,21.97C14.32,22 13.89,21.18 12.37,21.18C10.84,21.18 10.37,21.95 9.1,22C7.79,22.05 6.8,20.68 5.96,19.47C4.25,17 2.94,12.45 4.7,9.39C5.57,7.87 7.13,6.91 8.82,6.88C10.1,6.86 11.32,7.75 12.11,7.75C12.89,7.75 14.37,6.68 15.92,6.84C16.57,6.87 18.39,7.1 19.56,8.82C19.47,8.88 17.39,10.1 17.41,12.63C17.44,15.65 20.06,16.66 20.09,16.67C20.06,16.74 19.67,18.11 18.71,19.5M13,3.5C13.73,2.67 14.94,2.04 15.94,2C16.07,3.17 15.6,4.35 14.9,5.19C14.21,6.04 13.07,6.7 11.95,6.61C11.8,5.46 12.36,4.26 13,3.5Z"/>
+                        </svg>
+                        <span>App Store</span>
                     </a>
 
                     <div class="contact-item location">
@@ -708,7 +675,7 @@
                             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
                             <circle cx="12" cy="10" r="3"></circle>
                         </svg>
-                        <span>San Francisco, CA</span>
+                        <span>Columbus, OH</span>
                     </div>
                 </div>
             </section>
