updating the portfolio

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                     <span class="accent">Software</span> Engineer
                 </p>
                 <p class="description">
-                    Crafting digital experiences with passion and precision
+                    Crafting digital experiences and with passion and precision
                 </p>
             </div>
 
@@ -586,41 +586,13 @@
                     I'm a passionate developer with over 3 years of experience creating
                     <span class="accent">beautiful</span> and
                     <span class="accent">functional</span> digital solutions. I specialize in
-                    modern web technologies and user-centered design.
+                    modern web technologies, user-centered design, and scalable backend architecture.
+                    Please take a look at my LinkedIn and GitHub for more details.
                 </p>
                 <p>
                     When I'm not coding, you'll find me exploring new technologies, contributing to open source projects, or
                     enjoying a good cup of coffee.
                 </p>
-            </section>
-
-            <!-- Work Experience Section -->
-            <section class="section">
-                <h2><span class="accent">Application</span> Products</h2>
-                <div class="timeline">
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <div class="timeline-header">
-                                <h3 class="timeline-title">Loop</h3>
-                                <span class="timeline-period">2024 - Present</span>
-                            </div>
-                            <h4 class="timeline-company">Active</h4>
-                            <p class="timeline-description">
-                                Loop is a location based safety application that helps users stay safe by providing real-time alerts and safety tips based on their location.
-                                With a community driven approach, Loop empowers users to share safety information and stay informed about potential risks in their area.
-                            </p>
-                            <div class="achievements">
-                                <div class="achievement">
-                                    <span>Currently in development</span>
-                                </div>
-                                <div class="achievement">
-                                    <span>Will be available in App Store and Google Play</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </section>
 
             <!-- Contact Methods Section -->
@@ -642,13 +614,6 @@
                             <polyline points="22,6 12,13 2,6"></polyline>
                         </svg>
                         <span>virajpatel325@gmail.com</span>
-                    </a>
-
-                    <a href="tel:+6146578396" class="contact-item">
-                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
-                        </svg>
-                        <span>+1 (614) 657-8396</span>
                     </a>
 
                     <a href="https://github.com/viraj325" class="contact-item">
@@ -685,6 +650,35 @@
                             <circle cx="12" cy="10" r="3"></circle>
                         </svg>
                         <span>Columbus, OH</span>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Work Experience Section -->
+            <section class="section">
+                <h2><span class="accent">Application</span> Products</h2>
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <div class="timeline-header">
+                                <h3 class="timeline-title">Loop</h3>
+                                <span class="timeline-period">2024 - Present</span>
+                            </div>
+                            <h4 class="timeline-company">Active</h4>
+                            <p class="timeline-description">
+                                Loop is a location based safety application that helps users stay safe by providing real-time alerts and safety tips based on their location.
+                                With a community driven approach, Loop empowers users to share safety information and stay informed about potential risks in their area.
+                            </p>
+                            <div class="achievements">
+                                <div class="achievement">
+                                    <span>Currently in development</span>
+                                </div>
+                                <div class="achievement">
+                                    <span>Will be available in App Store and Google Play</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
