--- a/index-jay.html
+++ b/index-jay.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viraj Patel - Portfolio</title>
-    <meta name="description" content="Software Engineer Portfolio">
+    <title>Jay Shah</title>
+    <meta name="description" content="Jay's Portfolio">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600&display=swap" rel="stylesheet">
@@ -542,7 +542,7 @@
 <body data-theme="light">
     <div class="container">
         <div class="gradient-bg"></div>
-
+        
         <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
             <svg class="sun-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <circle cx="12" cy="12" r="5"></circle>
@@ -563,10 +563,7 @@
         <div class="content">
             <!-- Hero Section -->
             <div class="hero">
-                <h1>Viraj Patel</h1>
-                <p class="subtitle">
-                    <span class="accent">Software</span> Engineer
-                </p>
+                <h1>Jay Shah</h1>
             </div>
 
             <!-- Contact Methods Section -->
@@ -582,40 +579,19 @@
                         <span>Download Contact Card</span>
                     </a>
 
-                    <a href="mailto:virajpatel325@gmail.com" class="contact-item">
+                    <a href="mailto:shah.1684@osu.edu" class="contact-item">
                         <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
                             <polyline points="22,6 12,13 2,6"></polyline>
                         </svg>
-                        <span>virajpatel325@gmail.com</span>
+                        <span>shah.1684@osu.edu</span>
                     </a>
 
-                    <a href="https://github.com/viraj325" class="contact-item">
-                        <svg fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
-                        </svg>
-                        <span>https://github.com/viraj325</span>
-                    </a>
-
-                    <a href="https://www.linkedin.com/in/viraj-patel-b9baa3143/" class="contact-item">
+                    <a href="https://www.linkedin.com/in/jay-shah-f1/" class="contact-item">
                         <svg fill="currentColor" viewBox="0 0 24 24">
                             <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                         </svg>
-                        <span>https://www.linkedin.com/in/viraj-patel-b9baa3143/</span>
-                    </a>
-
-                    <!-- <a href="https://play.google.com/store/apps/details?id=com.taskmaster.pro" class="contact-item">
-                        <svg fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M3,20.5V3.5C3,2.91 3.34,2.39 3.84,2.15L13.69,12L3.84,21.85C3.34,21.61 3,21.09 3,20.5M16.81,15.12L6.05,21.34L14.54,12.85L16.81,15.12M20.16,10.81C20.5,11.08 20.75,11.5 20.75,12C20.75,12.5 20.53,12.9 20.18,13.18L17.89,14.5L15.39,12L17.89,9.5L20.16,10.81M6.05,2.66L16.81,8.88L14.54,11.15L6.05,2.66Z"/>
-                        </svg>
-                        <span>Google Play</span>
-                    </a> -->
-
-                    <a href="https://apps.apple.com/us/app/seed-social/id6443686127" class="contact-item">
-                        <svg fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M18.71,19.5C17.88,20.74 17,21.95 15.66,21.97C14.32,22 13.89,21.18 12.37,21.18C10.84,21.18 10.37,21.95 9.1,22C7.79,22.05 6.8,20.68 5.96,19.47C4.25,17 2.94,12.45 4.7,9.39C5.57,7.87 7.13,6.91 8.82,6.88C10.1,6.86 11.32,7.75 12.11,7.75C12.89,7.75 14.37,6.68 15.92,6.84C16.57,6.87 18.39,7.1 19.56,8.82C19.47,8.88 17.39,10.1 17.41,12.63C17.44,15.65 20.06,16.66 20.09,16.67C20.06,16.74 19.67,18.11 18.71,19.5M13,3.5C13.73,2.67 14.94,2.04 15.94,2C16.07,3.17 15.6,4.35 14.9,5.19C14.21,6.04 13.07,6.7 11.95,6.61C11.8,5.46 12.36,4.26 13,3.5Z"/>
-                        </svg>
-                        <span>App Store</span>
+                        <span>linkedin.com/in/jay-shah-f1</span>
                     </a>
 
                     <div class="contact-item location">
@@ -624,35 +600,6 @@
                             <circle cx="12" cy="10" r="3"></circle>
                         </svg>
                         <span>Columbus, OH</span>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Work Experience Section -->
-            <section class="section">
-                <h2><span class="accent">Application</span> Products</h2>
-                <div class="timeline">
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <div class="timeline-header">
-                                <h3 class="timeline-title">Loop</h3>
-                                <span class="timeline-period">2024 - Present</span>
-                            </div>
-                            <h4 class="timeline-company">Active</h4>
-                            <p class="timeline-description">
-                                Loop is a location based safety application that helps users stay safe by providing real-time alerts and safety tips based on their location.
-                                With a community driven approach, Loop empowers users to share safety information and stay informed about potential risks in their area.
-                            </p>
-                            <div class="achievements">
-                                <div class="achievement">
-                                    <span>Currently in development</span>
-                                </div>
-                                <div class="achievement">
-                                    <span>Will be available in App Store and Google Play</span>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </section>
@@ -728,11 +675,11 @@
         document.getElementById('downloadVcfButton').addEventListener('click', function() {
             // 1. Construct the VCF content
             const contact = {
-                firstName: "Viraj",
-                lastName: "Patel",
-                phoneNumber: "+16146578396",
-                email: "virajpatel325@gmail.com",
-                organization: "NetJets"
+                firstName: "Jay",
+                lastName: "Shah",
+                phoneNumber: "+16145841947",
+                email: "shah.1684@osu.edu",
+                organization: "OSU"
             };
             
             const vcfContent = `BEGIN:VCARD
