Change timeline title to 'Loop Safety' and update period
Updated project title and period for Loop entry in timeline.

--- a/index.html
+++ b/index.html
@@ -627,14 +627,15 @@
                         <div class="timeline-dot"></div>
                         <div class="timeline-content">
                             <div class="timeline-header">
-                                <h3 class="timeline-title">Loop</h3>
-                                <span class="timeline-period">2024 - Present</span>
+                                <h3 class="timeline-title">Loop Safety</h3>
+                                <span class="timeline-period">2025 - Present</span>
                             </div>
                             <h4 class="timeline-company">Active</h4>
                             <p class="timeline-description">
                                 Loop is a location based safety application that helps users stay safe by providing real-time alerts and safety tips based on their location.
                                 With a community driven approach, Loop empowers users to share safety information and stay informed about potential risks in their area.
                             </p>
+                            <a class="timeline-description" href="https://www.loopsafety.online">Click here to learn more.</a>
                             <div class="achievements">
                                 <div class="achievement">
                                     <span>Currently in development</span>
