Add last updated date to final section
Added a new section indicating the last updated date.

--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                                 Loop is a location based safety application that helps users stay safe by providing real-time alerts and safety tips based on their location.
                                 With a community driven approach, Loop empowers users to share safety information and stay informed about potential risks in their area.
                             </p>
-                            <a class="timeline-description" href="https://www.loopsafety.online">Click here to learn more.</a>
+                            
                             <div class="achievements">
                                 <div class="achievement">
                                     <span>Currently in development</span>
@@ -644,6 +644,8 @@
                                     <span>Will be available in App Store and Google Play</span>
                                 </div>
                             </div>
+                            
+                            <a class="timeline-description" href="https://www.loopsafety.online">Click here to learn more.</a>
                         </div>
                     </div>
                 </div>
@@ -655,6 +657,11 @@
                 <p>
                     I'm always interested in new opportunities and meaningful projects.
                 </p>
+            </section>
+
+            <section class="final-section">
+                <h2>Last <span class="accent">Updated </span></h2>
+                <p>Feb 10th, 2026</p>
             </section>
         </div>
     </div>
