Update subtitle to include 'Senior' designation

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
             <div class="hero">
                 <h1>Viraj Patel</h1>
                 <p class="subtitle">
-                    <span class="accent">Software</span> Engineer
+                    <span class="accent">Software</span> Engineer, Senior
                 </p>
             </div>
 
